<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"

    app:cardCornerRadius="10dp"

    app:cardElevation="5dp"


    android:background="#fff"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/linear"

            android:layout_marginBottom="@dimen/activity_vertical_margin"

            android:background="#0D8513"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tanggal"

                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:id="@+id/titleantrian"


                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/whiteTextColor"
                android:textStyle="bold"
                android:textAlignment="center"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/linear"
            android:id="@+id/line2"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"

            android:weightSum="2"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/TextSpec.Field"
                android:id="@+id/tv_dokter"

                android:text="@string/nama_dokter"
                />

            <TextView
                android:layout_width="match_parent"
                style="@style/TextSpec.Value"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/klinik_obgyn"
                android:id="@+id/tv_nm_klinik"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/line2"
            android:id="@+id/line3"

            android:layout_marginTop="8dp"
            android:weightSum="2"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/TextSpec.Field"
                android:id="@+id/tv_rm"

                android:text="@string/nama_no_rm"
                />

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                style="@style/TextSpec.Value"
                android:layout_height="wrap_content"

                android:id="@+id/nama_rm"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/line3"
            android:id="@+id/line4"

            android:layout_marginTop="8dp"
            android:weightSum="2"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nm_klinik"
                android:layout_weight="1"
                style="@style/TextSpec.Field"

                android:text="status"
                />

            <TextView
                android:layout_width="match_parent"
                style="@style/TextSpec.Value"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/status"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            style="@style/TextSpec.Value"
            android:layout_height="wrap_content"
            android:layout_below="@id/line4"
            android:layout_marginTop="8dp"
            android:textColor="@color/red"
            android:textAlignment="center"

            android:id="@+id/statusJadwal"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/statusJadwal"
            android:layout_marginTop="8dp"
            android:id="@+id/nb"
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:justificationMode="inter_word"
            android:text="Silahkan Datang Lebih Awal Untuk Registrasi Ulang Untuk Mendapat Nomor Antrian"
            tools:ignore="HardcodedText" />




        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nb"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:id="@+id/btn_detail"


            android:text="@string/tampilkan_detail_dan_barcode"
            android:background="#06610B"
            android:textColor="@color/white"

            />



    </RelativeLayout>





</androidx.cardview.widget.CardView>